--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "dependencies": {
     "divi-scripts": "1.0.1",
     "react": "^16.6.3",
-    "react-dom": "^16.6.3"
+    "react-dom": "^16.6.3",
+    "react-owl-carousel": "^2.3.1",
+    "react-owl-carousel2": "^0.3.0"
   },
   "scripts": {
     "start": "divi-scripts start",
